# fastapi_requests_sample

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
fastapi_requests_sample/: client_to_dynamodb.py  client_to_dynamodb_json.py  client_to_sql.py  config.toml  server_dynamodb.py  server_dynamodb_json.py  server_normal.py  server_sql.py
