[tool.poetry]
name = "fastapi-requests-sample"
version = "0.1.0"
description = ""
authors = ["7rikaz_h785 <7rikaz.h785.stat2ltas41lcijad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pymysql = "^1.1.0"
requests = "^2.31.0"
tomlkit = "^0.12.1"
boto3 = "^1.28.73"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
black = "^23.10.1"
taskipy = "^1.12.0"

[tool.taskipy.tasks]
black = "poetry run black fastapi_request_sample tests"
ruffcheck = "poetry run ruff fastapi_request_sample tests"
rufffix = "poetry run ruff fastapi_request_sample tests --fix"

[tool.black]
target-version = ['py310']

[tool.ruff]
# チェックするルール
select = ["E", "F", "I"]
# 無視するエラー
ignore = ["E402","E501"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Assume Python 3.10.
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
