[tool.poetry]
name = "fastapi-requests-sample"
version = "0.1.0"
description = ""
authors = ["7rikazhexde"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pymysql = "^1.1.0"
requests = "^2.31.0"
tomlkit = "^0.12.1"
boto3 = "^1.28.73"
pandas = "^2.1.2"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
black = "^23.10.1"
taskipy = "^1.12.0"
pre-commit = "^4.0.1"
mypy = "^1.13.0"
types-boto3 = "^1.0.2"
pydantic = {extras = ["mypy"], version = "^2.9.2"}
types-pymysql = "^1.1.0.20241103"
types-toml = "^0.10.8.20240310"
pandas-stubs = "^2.2.3.241009"

[tool.taskipy.tasks]
black = "poetry run black fastapi_requests_sample tests"
ruffcheck = "poetry run ruff fastapi_requests_sample tests"
rufffix = "poetry run ruff fastapi_requests_sample tests --fix"

[tool.black]
target-version = ['py310']

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
target-version = "py310"

[tool.ruff.lint]
# チェックするルール
select = ["E", "F", "I"]
# 無視するエラー
ignore = ["E402", "E501"]
per-file-ignores = {}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = []
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "uvicorn.*",
    "fastapi.*",
    "pydantic.*",
    "tomlkit.*",
    "pymysql.*",
    "pandas.*"
]
ignore_missing_imports = true
